--- a/registrationstyle.css
+++ b/registrationstyle.css
@@ -13,3 +13,14 @@ h1 {
     color: white;
     padding: 100px 500px;
  }
+
+ button {
+   color: black;
+   background-color: white;
+   padding: 10px 35px;
+   font-weight: bold;
+   font-size: 20px;
+   margin: 200px 400px;
+   border-radius: 18px;
+
+ }
