--- a/registrationstyle.css
+++ b/registrationstyle.css
@@ -4,23 +4,51 @@
     box-sizing: border-box;
 }
 
-
 body {
-    background-color: black;
+    background-color: gray;
 }
 
 h1 {
     color: white;
-    padding: 100px 500px;
  }
 
- button {
-   color: black;
-   background-color: white;
-   padding: 10px 35px;
-   font-weight: bold;
-   font-size: 20px;
-   margin: 200px 400px;
-   border-radius: 18px;
-
+ .registration-form {
+    padding: 50px 400px;
+    
  }
+
+ .registration-form h1 {
+    font-size: 28px;
+    text-align: center;
+    margin: 40px 0;
+    font-style: italic;
+ }
+
+ .registration-form p {
+    font-size: 20px;
+    margin: 15px 0;
+    color: white;
+    font-style: italic;
+ }
+
+ .registration-form input {
+    font-size: 16px;
+    padding: 15px 10px;
+    width: 100%;
+    border: 0;
+    border-radius: 5px;
+ }
+
+ .registration-form button {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 20px 0;
+    color: black;
+    padding: 10px 15px;
+    width: 40%;
+    border: 0;
+    border-radius: 5px;
+    background-color: white;
+    border-radius: 18px;
+    font-style: italic;
+  }
